// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Devices on larger devices renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-24-25"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 child"
  >
    <h6
      className="MuiTypography-root-98 MuiTypography-h6-115"
    >
      Smart devices
    </h6>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
</div>
`;

exports[`Devices on xs devices renders correctly 1`] = `
<div
  className="MuiGrid-container-1 MuiGrid-spacing-xs-16-24"
>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 child"
  >
    <h6
      className="MuiTypography-root-98 MuiTypography-h6-115"
    >
      Smart devices
    </h6>
  </div>
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
  <div
    className="MuiGrid-item-2 MuiGrid-grid-xs-12-41 MuiGrid-grid-sm-6-49"
  />
</div>
`;
